# moonrepo

./: .dockerignore  .gitignore  .prettierrc  .prototools  moonrepo.code-workspace
.github/: renovate.json
brachi/py/: main.py  pyproject.toml
cosmos/: .gitignore  Pulumi.cosmos.yaml  Pulumi.yaml  README.md  __main__.py  cloud-init.yaml  pyproject.toml
cosmos/argocd/apps/: argocd-image-updater.yaml  argocd-ingress.yaml  argocd-sealed-secret.yaml  brachi.yaml  grafana-sealed-secret.yaml  kepler-orbit.yaml  kube-prometheus-stack.yaml  monitoring-storage.yaml  personal-blog.yaml  personal-website-prod.yaml  sealed-secrets.yaml
cosmos/argocd/base/brachi/: deployment.yaml  ingress.yaml  service.yaml
cosmos/argocd/base/kepler-orbit/: deployment.yaml  ingress.yaml  service.yaml
cosmos/argocd/base/personal-blog/: deployment.yaml  ingress.yaml  service.yaml
cosmos/argocd/base/personal-website/: deployment.yaml  ingress.yaml  service.yaml
cosmos/argocd/overlays/prod/brachi/: .argocd-source-brachi.yaml  kustomization.yaml  namespace.yaml
cosmos/argocd/overlays/prod/kepler-orbit/: .argocd-source-kepler-orbit.yaml  kustomization.yaml  namespace.yaml
cosmos/argocd/overlays/prod/personal-blog/: .argocd-source-personal-blog.yaml  kustomization.yaml
cosmos/clusters/prod/: apps.yaml  flux-system-automation.yaml
cosmos/clusters/prod/flux-system/: gotk-sync.yaml
personal-blog/database/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.bak  README.md  compile.py  moon.yml  pyproject.toml  schema.sql
personal-blog/database/.cargo/: config.toml
personal-blog/database/posts/: flight_school.md  irab_tmnd.md  sampling.md  wsc2025.md
personal-blog/database/posts/average-entropy-of-a-discrete-probability-distribution-part-1/: index.md
personal-blog/database/posts/learning-to-fly-through-windows-in-cloud/: index.md
personal-blog/database/posts/my-deployment-setup-part-1/: index.md
personal-blog/database/posts/my-deployment-setup-part-2/: index.md
personal-blog/database/posts/sampling/: cprofile_direct.txt  gumbel_coeffs.ipynb
personal-blog/database/posts/sampling-a-categorical-pmf/: gumbel.json  gumbel_direct.json  index.md  lg2.json  linear.json
personal-blog/database/src/: main.rs  models.rs  schema.rs
(+136 files in other folders)
