[project]
name = "cosmos"
version = "3.0.0"
description = "Production universe of @InCogNiTo124 (powered by Hetzner and Pulumi)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pulumi>=3.0.0,<4.0.0",
    "pulumi-command>=1.1.3",
    "pulumi-hcloud>=1.31.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
