[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }

[dependencies.rocket]
version = "0.5.0"
default-features = false
features = ["json"]
