[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.197"
diesel = { version = "2.3.5", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket]
version = "0.5.0"
default-features = false
features = ["json"]
